update AGENTS.md and Project Architecture Blueprint for Java 25 compatibility and runtime instructions